# TrackmaniaFuzzer

./: .gitmodules  README.md  kick.py  throw.py
ExampleCrashes/: AddChallenge.xml  AddChallengeList.xml  CheckChallengeForCurrentServerParams.xml  ForceSpectatorTarget.xml  ForceSpectatorTargetId.xml  GetChallengeInfo.xml  InsertChallenge.xml  InsertChallengeList.xml  README.md  RemoveChallenge.xml  RemoveChallengeList.xml
Exploits/: format_string.py
GrammarFuzzer/: Cargo.toml  clear.sh  repro.sh  run.sh
GrammarFuzzer/notes/: map_load_backtrace.txt
GrammarFuzzer/src/: grammar.rs  helpers.rs  main.rs
GrammarFuzzer/src/grammar_data/: methods-arg.list
Server/: qemu.sh  start.sh
src/: main.rs
